<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/home"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/message"
            android:title="@string/messages"
            android:icon="@drawable/ic_messages"/>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout"/>
    </group>

</menu>