<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196f3"
    tools:context=".Fragment.RegisterPage">

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/tega"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/img"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:hint="@string/Email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:padding="15dp"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/etEmail"
        android:background="#ffffff"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/Password"
        android:inputType="text"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        app:backgroundTint="#1a237e"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textSize="15sp"/>


</RelativeLayout>