<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196f3"
    tools:context=".Activity.LoginActivity">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="196dp"
        android:layout_height="146dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="136dp"
        android:contentDescription="TODO"
        android:padding="8dp"
        android:src="@drawable/tega"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="6dp"
                app:boxCornerRadiusTopStart="24dp"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInEmail"
                    android:layout_width="353dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_perm_identity_24"
                    android:drawablePadding="6dp"
                    android:hint="@string/Email"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:paddingTop="6dp"
                app:passwordToggleContentDescription="not show password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="6dp"
                    android:hint="@string/Password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:paddingTop="6dp"
                android:layout_marginBottom="24dp"
                app:passwordToggleContentDescription="Not show password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="6dp"
                    android:hint="@string/confirm_password" />
            </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txtForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/forgotPassword"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="105dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="110dp"
                    android:background="@drawable/login_btn_bg"
                    android:text="@string/login"
                    android:textSize="15sp"
                    app:backgroundTint="#2196f3" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/signup"
                    android:textColor="#2196f3"
                    android:textSize="15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>