<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#607d8b"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_dashboard"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_margin="20dp"/>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="2"
            android:columnCount="2"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="#ffffff"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/form"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/screen_forms"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="#ffffff"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/cloud"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/special_report"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="#ffffff"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/analysis"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Screen Analysis"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="170dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="#ffffff"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:src="@drawable/correct"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/screen_eff"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="5dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>

</ScrollView>